WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194569
Null deref in userInterfaceLayoutDirection under ViewGestureController::handleSwipeGesture
https://bugs.webkit.org/show_bug.cgi?id=194569
Summary
Null deref in userInterfaceLayoutDirection under ViewGestureController::handl...
Tim Horton
Reported
2019-02-12 17:02:41 PST
Null deref in userInterfaceLayoutDirection under ViewGestureController::handleSwipeGesture
Attachments
Patch
(2.01 KB, patch)
2019-02-12 17:02 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-02-12 17:02:47 PST
Created
attachment 361869
[details]
Patch
Tim Horton
Comment 2
2019-02-12 17:02:48 PST
<
rdar://problem/46711049
>
WebKit Commit Bot
Comment 3
2019-02-12 23:36:35 PST
Comment on
attachment 361869
[details]
Patch Clearing flags on attachment: 361869 Committed
r241349
: <
https://trac.webkit.org/changeset/241349
>
WebKit Commit Bot
Comment 4
2019-02-12 23:36:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug